feat: Implement Deep Thinking Mode for enhanced query processing and add text cleaning utilities
(cherry picked from commit 325e9526313fa8cbdb10f93b95f975a9d9434955)