@@ -1,6 +1,7 @@
 package com.example.qarag.ingestion.chunker;
 
 import com.example.qarag.config.RagProperties;
+import com.example.qarag.ingestion.utils.TextCleaner;
 import dev.langchain4j.data.document.Document;
 import dev.langchain4j.data.document.DocumentSplitter;
 import dev.langchain4j.data.document.Metadata;
@@ -48,7 +49,10 @@ public class MarkdownChunker implements DocumentChunker {
             if (encoding == null)
                 encoding = "UTF-8";
 
-            document = Document.from(new String(bytes, Charset.forName(encoding)));
+            String rawText = new String(bytes, Charset.forName(encoding));
+            // 文本清洗
+            rawText = TextCleaner.clean(rawText);
+            document = Document.from(rawText);
         } catch (IOException e) {
             log.error("读取 Markdown 文件失败: {}", filePath, e);
             throw new RuntimeException("读取 Markdown 文件失败", e);
@@ -88,7 +92,7 @@ public class MarkdownChunker implements DocumentChunker {
                 } else {
                     // 层级同级或变浅，保留前 level-1 个
                     while (currentPath.size() >= level) {
-                        currentPath.remove(currentPath.size() - 1);
+                        currentPath.removeLast();
                     }
                     currentPath.add(title);
                 }
